--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,8 +1,7 @@
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/primary"
-    app:popupTheme="@style/Theme.AppCompat.Light"
-    app:theme="@style/Theme.AppCompat"/>
+    android:popupTheme="@style/Theme.AppCompat.Light"
+    android:theme="@style/Theme.AppCompat"/>
