--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#727272</color>
     <color name="icons">#FFFFFF</color>
-    <color name="grey">#B6B6B6</color>
+    <color name="grey">#d9d9d9</color>
     <color name="white">#FFFFFF</color>
+    <color name="background">#fff3f3f3</color>
 </resources>
