--- a/app/src/main/res/layout/item_books_gridview.xml
+++ b/app/src/main/res/layout/item_books_gridview.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:background="@drawable/item_gridview_bg"
         android:padding="8dp"
         android:layout_margin="8dp"
+        android:layout_height="match_parent"
         >
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/book_cover_iv"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="160dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/book_128" />
+            android:src="@drawable/book_128"
+            android:adjustViewBounds="true"
+            />
 
         <TextView
             android:id="@+id/book_title_tv"
@@ -25,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/imageView"
+            android:layout_below="@+id/book_cover_iv"
             android:text="Book title"
             android:textColor="@color/primary_text"
             android:textSize="16sp"
